# aichallenge_bringup

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  create-tar-file.sh  package.xml
data/: aichallenge.rviz  front_camera.yaml  lanelet2_fixed.osm  leuxs.json  lexus.json  lexus.urdf  localizer.yaml  saved_waypoints.csv  simulator.pcd
launch/: aichallenge_bringup.launch  avoid_example.launch  user_nodes.launch
scenario/: acc.py  avoid.py  traffic_light.py
scripts/: initial_pose_publisher.py  yaml_to_camera_info_publisher.py
