<?xml version="1.0"?>
<package format="2">
  <name>aichallenge_bringup</name>
  <version>0.0.0</version>
  <description>The aichallenge_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="autoware@todo.todo">autoware</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>map_file</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>map_file</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>map_file</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
